# buguldey-ai-foss

./: ProjectHome.md  README.md
1/: CodeGenerator.cpp  CodeGenerator.h  Parser.frame  Parser.h  Types.h
FORPEOPLE/: program
ec_oberon/: Makefile  ModuleTable.cpp
eclipse_projects/: MODULE.Mod  oberon_multiplatform_duduk.Mod  ok.Mod
eclipse_projects/alpha_messenger_incubation/micq-0.5.0.4/: Makefile.am
eclipse_projects/alpha_messenger_incubation/micq-0.5.0.4/doc/: micq.7  micqrc.5
eclipse_projects/alpha_messenger_incubation/micq-0.5.0.4/doc/de/: micq.1
eclipse_projects/alpha_messenger_incubation/micq-0.5.0.4/doc/fr/: micqrc.5
eclipse_projects/alpha_messenger_incubation/micq-0.5.0.4/doc/it/: micq.1
eclipse_projects/alpha_messenger_incubation/micq-0.5.0.4/doc/sk/: micq.7
eclipse_projects/alpha_messenger_incubation/micq-0.5.0.4/include/: contact.h  icq_tcp.h  icq_v5.h  micq.h  util_ssl.h
eclipse_projects/alpha_messenger_incubation/micq-0.5.0.4/lang/: fr.i18n
eclipse_projects/alpha_messenger_incubation/micq-0.5.0.4/src/: Makefile.in  buildmark.c  connection.c  i18n.c  im_icq8.c  micq.c  msg_queue.c  oldicq_client.c  oldicq_compat.c  oscar_base.c  oscar_contact.c  oscar_icbm.c  oscar_location.c  oscar_oldicq.c  oscar_tlv.c  packet.c  peer_file.c  preferences.c  remote.c  server.c  util_table.c  util_tcl.c  util_ui.c
oberon_e_incubation/: Copyright.frame  Oberon.atg
oberon_genericarch_canonical_form_incubation/: .cproject  .project  COURSE_OF_THINGS.txt  CodeGenerator.cpp  CodeGenerator.h  InterpreterBackendMemory.h  Makefile  ModuleTable.cpp  Parser.h  (+19 more)
(+916 files in other folders)
