# $Id: Makefile.am,v 1.4 2001/05/23 14:45:07 kuhlmann Exp $ 

SUBDIRS = src lang doc

EXTRA_DIST = TODO

cvsclean: distclean
	rm -rf Makefile.in */Makefile.in config.guess config.sub configure \
	       config.h.in include/config.h.in include/stamp-h stamp-h.in */stamp-h.in \
	       aclocal.m4 install-sh mkinstalldirs missing
